feat: add converters for ClubIdentifier, CompetitorCategory, Division, FirearmType, MatchCategory, and PowerFactor